fix hover name on event window not showing problem

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -338,8 +338,18 @@
         margin-bottom: 0.4rem
         border-radius: 50%
         border: solid 0.2rem var(--border-color-eventwindow)
-        flex-start
+        justify-content: flex-start
         background-color: var(--background-color-userpic)
+      .member-hover
+        display: none
+        position: absolute
+        font-size: 0.8rem
+        white-space: nowrap
+        padding: 0.2rem 0.3rem
+        background-color: var(--ricewhite)
+        border: solid 2px var(--blue)
+        border-radius: 0.5rem
+        z-index: 3
       #bar
         width: 2.5rem
         height: 0.2rem
@@ -356,34 +366,19 @@
         height: 16rem
         //overflow: hidden
         
-        
         .member
           width: 3rem
           height: 3rem
           margin-bottom: 0.2rem
           border-radius: 50%
-          background-color: #FFFFFF
+          background-color: #FFFFFF 
         .participant
           border: solid 0.15rem var(--border-color-participate)
         .interested
           border: solid 0.15rem var(--background-color-userpic)
         a
           position: relative
-          .member-hover
-            display: none
-            position: absolute
-            transform: translate(100%, -50%)
-            top: 50%
-            right: -0.5rem
-            white-space: nowrap
-            padding: 0.2rem 0.3rem
-            background-color: var(--ricewhite)
-            border: solid 2px var(--blue)
-            border-radius: 0.5rem
-            z-index: 3
-          
-          
-        
+ 
       .login-redirect
         position: relative
         transform: translateY(4rem)
